# recommenderSystems

./: .gitignore  .python-version  LICENSE  README.md  dataexploration.ipynb  interessing_papers.md  mkdocs.yml  pyproject.toml  research-plan.md  zipper.sh
docs/: index.md
lectures/: lecture-2.ipynb  lecture-3.ipynb  lecture_1.ipynb
metrics/: bprmf_0.json  bprmf_1.json  bprmf_10.json  bprmf_11.json  bprmf_12.json  bprmf_13.json  bprmf_14.json  bprmf_15.json  bprmf_16.json  bprmf_2.json  bprmf_3.json  bprmf_5.json  bprmf_6.json  bprmf_7.json  bprmf_8.json  bprmf_9.json  bprmf_optimize_0.json  bprmf_optimize_1.json  bprmf_optimize_2.json  bprmf_optimize_3.json  ppac_0.csv  ppac_1.csv
metrics/temp/: bprmf_0.json  bprmf_1.json  bprmf_2.json  bprmf_3.json  bprmf_4.json  ppac_1.json  ppac_3.json  ppac_5.json  ppac_9.json  ppac_optimize_0.json
notebooks/: dataexploration.ipynb  dataexploration2.ipynb
reports/: final_df_report.html  games.html  train_interaction_report.html  user_reviews_report.html
results/: optimisation_results.json  results.json
src/: dataexploration.ipynb  main.py  metrics.py  mfbpr.py  my_bprmf.py  my_itemknn.py  new_metrics.py  pipeline_block.py  preprocess_block.py  splitter.py  splitting_block.py  utils.py
