[project]
name = "recommendersystems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mkdocs-material>=9.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.4",
    "seaborn>=0.13.2",
    "torch==2.2.0",
]
